# slimeball-graphic-lib

./: CMakeLists.txt  COPYING  README.md  ZmultiplierLib-Helper-v0.0.md
.codebuddy/commands/: brainstorm.md
examples/: CMakeLists.txt  bee.cpp  eg1.cpp  eg10_circle.cpp  eg11_putcircle.cpp  eg12_load_picture.cpp  eg13_text.cpp  eg2_first_window.cpp  eg3_multiple_window.cpp  eg4_background_draw.cpp  eg5_alphablend.cpp  eg8_flood_fill.cpp  test.cpp
include/: BasicUI.hpp  Canvas.hpp  Clock.hpp  Color.hpp  DefaultAIBehavior.hpp  EntryPoint.hpp  Font.hpp  GameObject.hpp  Graphics.hpp  Image.hpp  Logger.hpp  Painter.hpp  Utils.hpp  Window.hpp
src/UI/: basicUI.cpp
src/assets/: Font.cpp  Image.cpp
src/core/: Canvas.cpp  Clock.cpp  Color.cpp  EntryPoint.cpp  Logger.cpp
src/game/: GameObject.cpp
src/image/: Image.cpp
src/painter/: Painter.cpp
src/utils/: Utils.cpp
src/window/: Window.cpp
